[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mdx2"
description = "Macromolecular diffuse scattering data reduction"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { email = "spm82@cornell.edu", name = "Steve Meisburger" },
]
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "dxtbx", 
    "nexusformat",
    "joblib",
    "numexpr",
    "simple-parsing",
    "loguru",
]
# dxtbx needs to be installed with conda

[project.optional-dependencies]
test = ["pytest>=6.0"]
dev = ["ruff>=0.1.0", "pytest>=6.0"]

[project.urls]
Homepage = "https://github.com/ando-lab/mdx2"
Issues = "https://github.com/ando-lab/mdx2/issues"

[project.scripts]
"mdx2.version" = "mdx2.command_line.version:run"
"mdx2.import_data" = "mdx2.command_line.import_data:run"
"mdx2.import_geometry" = "mdx2.command_line.import_geometry:run"
"mdx2.find_peaks" = "mdx2.command_line.find_peaks:run"
"mdx2.mask_peaks" = "mdx2.command_line.mask_peaks:run"
"mdx2.tree" = "mdx2.command_line.tree:run"
"mdx2.bin_image_series" = "mdx2.command_line.bin_image_series:run"
"mdx2.integrate" = "mdx2.command_line.integrate:run"
"mdx2.correct" = "mdx2.command_line.correct:run"
"mdx2.merge" = "mdx2.command_line.merge:run"
"mdx2.map" = "mdx2.command_line.map:run"
"mdx2.scale" = "mdx2.command_line.scale:run"
"mdx2.reintegrate" = "mdx2.command_line.reintegrate:run"

[tool.setuptools.dynamic]
version = {file = "mdx2/VERSION"}

[tool.setuptools.packages.find]
include = ["mdx2", "mdx2.*"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style= "double"
indent-style= "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["E", "F", "W", "A", "PLC", "PLE", "PLW", "I"]
ignore = ["E741", "F541"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]